k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchworth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchworth-backend
  template:
    metadata:
      labels:
        app: watchworth-backend
    spec:
      containers:
        - name: watchworth-backend
          image: cvsudeep/watchworthbackend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
