k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watchworth-backend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "backend.watchworth.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: watchworth-backend
                port:
                  number: 8080
